[gd_scene load_steps=44 format=2]

[ext_resource path="res://art/characters/player/FinalMaybe/Run/adventurer-run-00-1.3.png" type="Texture" id=1]
[ext_resource path="res://scenes/characters/Player.gd" type="Script" id=2]
[ext_resource path="res://art/characters/player/FinalMaybe/Run/adventurer-run-04-1.3.png" type="Texture" id=3]
[ext_resource path="res://art/characters/player/FinalMaybe/Idle/adventurer-idle-00-1.3.png" type="Texture" id=4]
[ext_resource path="res://art/weapon/dagger2.png" type="Texture" id=5]
[ext_resource path="res://art/world/Sky.png" type="Texture" id=6]
[ext_resource path="res://art/UI/Lifebar/behind.png" type="Texture" id=7]
[ext_resource path="res://art/UI/Lifebar/Over.png" type="Texture" id=8]
[ext_resource path="res://scenes/characters/SwordCollisonPlayer.gd" type="Script" id=9]
[ext_resource path="res://scenes/UI/Windows/PauseMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://art/UI/Lifebar/inFront.png" type="Texture" id=11]
[ext_resource path="res://art/UI/Pause.png" type="Texture" id=12]
[ext_resource path="res://art/weapon/Hero/HeroSwordCentered.png" type="Texture" id=13]
[ext_resource path="res://art/world/PickUp/Key.png" type="Texture" id=14]
[ext_resource path="res://art/characters/player/FinalMaybe/WallSlide/adventurer-wall-slide-01-1.3.png" type="Texture" id=15]
[ext_resource path="res://art/characters/player/FinalMaybe/WallSlide/adventurer-wall-slide-00-1.3.png" type="Texture" id=16]
[ext_resource path="res://art/characters/player/FinalMaybe/Jumping/adventurer-jump-00-1.3.png" type="Texture" id=17]
[ext_resource path="res://art/characters/player/FinalMaybe/Jumping/adventurer-jump-01-1.3.png" type="Texture" id=24]
[ext_resource path="res://scenes/characters/PlayerStates.gd" type="Script" id=25]
[ext_resource path="res://art/characters/player/FinalMaybe/Jumping/adventurer-jump-02-1.3.png" type="Texture" id=26]
[ext_resource path="res://art/characters/player/FinalMaybe/Jumping/adventurer-jump-03-1.3.png" type="Texture" id=27]
[ext_resource path="res://art/characters/player/FinalMaybe/Idle/adventurer-idle-01-1.3.png" type="Texture" id=28]
[ext_resource path="res://art/characters/player/FinalMaybe/Run/adventurer-run-03-1.3.png" type="Texture" id=29]
[ext_resource path="res://art/characters/player/FinalMaybe/Run/adventurer-run-01-1.3.png" type="Texture" id=30]
[ext_resource path="res://art/characters/player/FinalMaybe/Run/adventurer-run-02-1.3.png" type="Texture" id=31]
[ext_resource path="res://art/characters/player/FinalMaybe/Run/adventurer-run-05-1.3.png" type="Texture" id=32]
[ext_resource path="res://art/characters/player/FinalMaybe/Idle/adventurer-idle-02-1.3.png" type="Texture" id=33]
[ext_resource path="res://art/characters/player/FinalMaybe/Attack/adventurer-attack1-00-1.3.png" type="Texture" id=34]
[ext_resource path="res://art/characters/player/FinalMaybe/Attack/adventurer-attack1-01-1.3.png" type="Texture" id=35]
[ext_resource path="res://art/characters/player/FinalMaybe/Attack/adventurer-attack1-02-1.3.png" type="Texture" id=36]
[ext_resource path="res://art/characters/player/FinalMaybe/Attack/adventurer-attack1-03-1.3.png" type="Texture" id=37]
[ext_resource path="res://art/characters/player/FinalMaybe/adventurer-1.3-Sheet.png" type="Texture" id=38]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 27 ) ],
"loop": true,
"name": "Jumping",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 29 ), ExtResource( 3 ), ExtResource( 32 ) ],
"loop": true,
"name": "Run",
"speed": 7.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 15 ) ],
"loop": true,
"name": "WallSlide",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 28 ), ExtResource( 33 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ) ],
"loop": true,
"name": "Attack",
"speed": 7.0
} ]

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( -4.61255, 5.49856, 1.80222, 5.78225, 3.8032, 7.15134, 3.47005, 14.1682, 3.33396, 13.9236, 3.74438, 16.7379, 3.66495, 16.7019, 3.21019, 21.9641, 4.71247, 31.7927, 4.88837, 34.2552, 3.05124, 34.4042, 1.58604, 25.5373, -2.24693, 25.4073, -3.7305, 34.1966, -5.54808, 34.0793, -6.59964, 23.8481, -6.50189, 23.7747, -5.36529, 15.9223, -5.35014, 16.0004, -5.54609, 9.66059, -6.09065, 7.48233 )

[sub_resource type="Animation" id=3]
resource_name = "Attack"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 42, 43, 44, 45 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Jump"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 22, 23, 22, 23, 22 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Run"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=7]
resource_name = "WallSlide"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 79, 80 ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 5.08072, 7.68702 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10.0334, 10.3747 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 5.64077, 8.34889 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 4.91546, 1.88923 )

[node name="Player" type="KinematicBody2D" groups=[
"Saving",
]]
collision_layer = 1025
collision_mask = 168
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -0.528793 )
current = true
drag_margin_left = 1.0
drag_margin_top = 1.0
drag_margin_right = 1.0
drag_margin_bottom = 1.0
editor_draw_drag_margin = true
__meta__ = {
"_edit_group_": true
}

[node name="Body" type="Node2D" parent="."]

[node name="Sprite" type="AnimatedSprite" parent="Body"]
visible = false
position = Vector2( -0.110371, -3.80177 )
scale = Vector2( 0.64, 0.64 )
frames = SubResource( 1 )
animation = "Idle"
frame = 1
playing = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="Body/Sprite"]
visible = false
position = Vector2( 0.701135, -16.4066 )
occluder = SubResource( 2 )

[node name="DaggerSprite" type="Sprite" parent="Body"]
position = Vector2( 0, 1.794 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 5 )

[node name="KeySprite" type="Sprite" parent="Body"]
visible = false
position = Vector2( 0, -16 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 14 )

[node name="Sheet" type="Sprite" parent="Body"]
position = Vector2( 0, -1.97171 )
scale = Vector2( 0.64, 0.64 )
texture = ExtResource( 38 )
vframes = 12
hframes = 8
frame = 44

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body"]
anims/Attack = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Jump = SubResource( 5 )
anims/Run = SubResource( 6 )
anims/WallSlide = SubResource( 7 )

[node name="SwordCollison" type="Area2D" parent="Body"]
collision_layer = 16
collision_mask = 2
script = ExtResource( 9 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Body/SwordCollison"]
polygon = PoolVector2Array( 3.70461, -13.9196, 13.0919, -10.534, 15.4772, -6.37896, 15.4772, -1.53141, 7.70576, 6.24006, 0.934582, 6.16311, 7.39798, -0.685013, 7.70576, -5.07089, 1.70403, -10.6879, -1.7585, -11.0726 )

[node name="UI" type="Control" parent="."]
margin_left = -180.0
margin_top = -99.3853
margin_right = 180.0
margin_bottom = 98.6147
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Button" parent="UI"]
visible = false
margin_left = 172.607
margin_top = 5.0
margin_right = 206.607
margin_bottom = 27.0
rect_scale = Vector2( 0.5, 0.5 )
text = " "
icon = ExtResource( 12 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" parent="UI" instance=ExtResource( 10 )]
anchor_top = 0.00147471
anchor_right = 0.0
anchor_bottom = 0.00147471
margin_left = 7.12894
margin_top = 5.9104
margin_right = 357.129
margin_bottom = 193.91

[node name="HealthBar" type="TextureProgress" parent="UI"]
modulate = Color( 0.278431, 0.984314, 0.0392157, 1 )
margin_left = 18.0
margin_right = 50.0
margin_bottom = 16.0
value = 100.0
texture_under = ExtResource( 7 )
texture_over = ExtResource( 8 )
texture_progress = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponMenu" type="Control" parent="UI"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DaggerScore" type="Control" parent="UI/WeaponMenu"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dagger1" type="TextureRect" parent="UI/WeaponMenu/DaggerScore"]
margin_left = 292.0
margin_top = 6.0
margin_right = 332.0
margin_bottom = 46.0
rect_rotation = 90.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dagger2" type="TextureRect" parent="UI/WeaponMenu/DaggerScore"]
margin_left = 300.0
margin_top = 6.0
margin_right = 340.0
margin_bottom = 46.0
rect_rotation = 90.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dagger3" type="TextureRect" parent="UI/WeaponMenu/DaggerScore"]
margin_left = 308.0
margin_top = 6.0
margin_right = 348.0
margin_bottom = 46.0
rect_rotation = 90.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dagger4" type="TextureRect" parent="UI/WeaponMenu/DaggerScore"]
margin_left = 316.0
margin_top = 6.0
margin_right = 356.0
margin_bottom = 46.0
rect_rotation = 90.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dagger5" type="TextureRect" parent="UI/WeaponMenu/DaggerScore"]
margin_left = 324.0
margin_top = 6.0
margin_right = 364.0
margin_bottom = 46.0
rect_rotation = 90.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dagger6" type="TextureRect" parent="UI/WeaponMenu/DaggerScore"]
margin_left = 292.0
margin_top = 14.0
margin_right = 332.0
margin_bottom = 54.0
rect_rotation = 90.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dagger7" type="TextureRect" parent="UI/WeaponMenu/DaggerScore"]
margin_left = 300.0
margin_top = 14.0
margin_right = 340.0
margin_bottom = 54.0
rect_rotation = 90.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dagger8" type="TextureRect" parent="UI/WeaponMenu/DaggerScore"]
margin_left = 308.0
margin_top = 14.0
margin_right = 348.0
margin_bottom = 54.0
rect_rotation = 90.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dagger9" type="TextureRect" parent="UI/WeaponMenu/DaggerScore"]
margin_left = 316.0
margin_top = 14.0
margin_right = 356.0
margin_bottom = 54.0
rect_rotation = 90.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dagger10" type="TextureRect" parent="UI/WeaponMenu/DaggerScore"]
margin_left = 324.0
margin_top = 14.0
margin_right = 364.0
margin_bottom = 54.0
rect_rotation = 90.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponChoice" type="Control" parent="UI/WeaponMenu"]
margin_right = 50.0
margin_bottom = 198.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeroSwordtexture" type="TextureRect" parent="UI/WeaponMenu/WeaponChoice"]
margin_left = 5.0
margin_top = 46.0
margin_right = 70.0
margin_bottom = 110.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 13 )

[node name="ColorRect" type="ColorRect" parent="UI/WeaponMenu/WeaponChoice/HeroSwordtexture"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.0
margin_right = 10.0
margin_bottom = 16.0
color = Color( 0, 0, 0, 0 )

[node name="DaggerTexture" type="TextureRect" parent="UI/WeaponMenu/WeaponChoice"]
margin_left = 4.0
margin_top = 62.0
margin_right = 44.0
margin_bottom = 102.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="UI/WeaponMenu/WeaponChoice/DaggerTexture"]
margin_right = 32.0
margin_bottom = 32.0
color = Color( 0, 0, 0, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 0.262599 )
shape = SubResource( 8 )

[node name="enemyDetector" type="Area2D" parent="."]
visible = false
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyDetector"]
self_modulate = Color( 0.266667, 0.00392157, 1, 1 )
scale = Vector2( 0.55, 0.8 )
shape = SubResource( 9 )

[node name="DaggerSpawnPosition" type="Position2D" parent="."]
position = Vector2( 0, 1.794 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 640, 640 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 6 )
centered = false

[node name="PickUpArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea"]
visible = false
modulate = Color( 0.027451, 0.027451, 0.027451, 1 )
shape = SubResource( 10 )

[node name="Timer" type="Node" parent="."]

[node name="DaggerTimer" type="Timer" parent="Timer"]

[node name="HeroSwordTimer" type="Timer" parent="Timer"]

[node name="Raycasts" type="Node2D" parent="."]
visible = false

[node name="RayCast2D" type="RayCast2D" parent="Raycasts"]
position = Vector2( 4, 0.262599 )
scale = Vector2( 0.5, 0.5 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 136

[node name="RayCast2D2" type="RayCast2D" parent="Raycasts"]
position = Vector2( -4, 0.262599 )
scale = Vector2( 0.5, 0.5 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 136

[node name="RayCast2D3" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, 0.262599 )
scale = Vector2( 0.5, 0.5 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 136

[node name="RaycastsSide" type="Node2D" parent="."]
visible = false

[node name="RayCast2DLeft1" type="RayCast2D" parent="RaycastsSide"]
position = Vector2( 0, -5.08646 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
cast_to = Vector2( 0, 13 )
collision_mask = 8

[node name="RayCast2DLeft2" type="RayCast2D" parent="RaycastsSide"]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
enabled = true
cast_to = Vector2( 0, 13 )
collision_mask = 8

[node name="RayCast2DLeft3" type="RayCast2D" parent="RaycastsSide"]
position = Vector2( 0, 5.794 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
cast_to = Vector2( 0, 13 )
collision_mask = 8

[node name="RayCast2DRight1" type="RayCast2D" parent="RaycastsSide"]
position = Vector2( 0, -5.08646 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
cast_to = Vector2( 0, 13 )
collision_mask = 8

[node name="RayCast2DRight2" type="RayCast2D" parent="RaycastsSide"]
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
enabled = true
cast_to = Vector2( 0, 13 )
collision_mask = 8

[node name="RayCast2DRight3" type="RayCast2D" parent="RaycastsSide"]
position = Vector2( 0, 5.794 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
cast_to = Vector2( 0, 13 )
collision_mask = 8

[node name="DeathTileMaps" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathTileMaps"]
visible = false
position = Vector2( 0, 8.26372 )
shape = SubResource( 11 )

[node name="PlayerStates" type="Node" parent="."]
script = ExtResource( 25 )

[node name="Idle" type="Node" parent="PlayerStates"]

[node name="Run" type="Node" parent="PlayerStates"]

[node name="Jump" type="Node" parent="PlayerStates"]

[node name="Fall" type="Node" parent="PlayerStates"]

[node name="Attack" type="Node" parent="PlayerStates"]
[connection signal="pressed" from="UI/Pause" to="." method="_on_Pause_pressed"]
[connection signal="area_entered" from="enemyDetector" to="." method="_on_enemyDetector_area_entered"]
[connection signal="area_entered" from="PickUpArea" to="." method="_on_PickUpArea_area_entered"]
[connection signal="timeout" from="Timer/DaggerTimer" to="." method="_on_DaggerTimer_timeout"]
[connection signal="timeout" from="Timer/HeroSwordTimer" to="." method="_on_HeroSwordTimer_timeout"]
[connection signal="body_entered" from="DeathTileMaps" to="." method="_on_DeathTileMaps_body_entered"]
